# contract-sol

./: .gitignore
bridge-core/: .gitignore  Anchor.toml  package.json
bridge-core/programs/bridge-core/: Cargo.toml
bridge-core/programs/bridge-core/src/: error.rs  evnet.rs  lib.rs
bridge-core/programs/bridge-core/src/instructions/: config.rs  message.rs  mod.rs  validator.rs
bridge-core/programs/bridge-core/src/state/: config.rs
bridge-core/programs/bridge-core/src/utils/: mod.rs  sigverify.rs
bridge-core/tests/: bridge-core.ts
bridge-token/: Anchor.toml  package.json
bridge-token/programs/bridge-token/: Cargo.toml
bridge-token/programs/bridge-token/src/: error.rs  lib.rs
bridge-token/programs/bridge-token/src/instructions/: config.rs  executor.rs  mod.rs  pool.rs  token.rs
bridge-token/programs/bridge-token/src/state/: config.rs  executor.rs  mod.rs  pool.rs
bridge-token/tests/: bridge-token.ts
